refactor: move components to page and run Biome

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -86,7 +86,7 @@
   --main-background: oklch(0.97 0 0);
   --main-invert: oklch(0.205 0 0);
 
-  --electron: oklch(0.5767 0.0653 210.53)
+  --electron: oklch(0.5767 0.0653 210.53);
 }
 
 .dark {
@@ -129,7 +129,7 @@
   --main-background: oklch(0.145 0 0);
   --main-invert: oklch(0.8 0 0);
 
-  --electron: oklch(0.5767 0.0653 210.53)
+  --electron: oklch(0.5767 0.0653 210.53);
 }
 
 @layer base {
